--- a/gb/22/12/2/n13877328.md
+++ b/gb/22/12/2/n13877328.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>车祸酿严重外伤 高压氧治疗助8旬翁免开刀</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13877329-588272-600x400.jpg" />
-<h6>高压氧治疗可以让氧气帮助组织复原，并建立良性循环，让病人获得良好的复原状态（大千综合医院提供）
-</h6>
+<h6>高压氧治疗可以让氧气帮助组织复原，并建立良性循环，让病人获得良好的复原状态（大千综合医院提供）</h6>
 <hr>
 <p>【大纪元2022年12月02日讯】（大纪元记者陈文敏台湾苗栗报导）家住苗栗80岁的洪爷爷到外地出游时，发生车祸造成左小腿全皮缺损的大片伤口与开放性粉碎骨折，加上大腿粉碎性骨折，在当地医院先接受骨折的内固定手术及伤口的植皮手术，后为就近治疗转至大千综合医院，但其左小腿仍然有深可见骨钉的伤口，且合并坏疽组织与明确的化脓。经医师评估后，洪先生接受扩创手术及高压氧治疗，两个月后伤口愈合良好，也免除再开刀的痛苦。</p>
 <p>大千综合医院一般外科医师林泽村表示，肢体的压、砸伤，除了清楚可见的骨折、皮肤或肌肉韧带的撕裂伤之外，另一个容易被忽略的问题是周边血液循环受损，造成的原因可能是血管的直接伤害，或是软组织受伤肿胀造成的血管外在压迫。此时，高压氧治疗就非常重要，除了可以让氧气进入受损的组织帮助复原，复原后的消肿更可以打破过去“肿胀、压迫、缺血、更肿胀”的恶性循环，建立“复原、消肿、更好的血循、更多的组织新生”的良性循环，让病人可以不用再手术就能获得良好的复原状态。</p>
@@ -13,41 +12,33 @@
 <p>林泽村医师表示，高压氧治疗能帮助伤口愈合，让病人不用历经二次手术就可获得良好的复原状况，提供不希望再开刀或不适合手术的病人一新选择。</p>
 <p>责任编辑：王愉悦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346385.md#1">县长希望各局处推动大硅谷计划 让苗栗县脱胎换骨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346374.md#1">耳朵突然听不清 高压氧治疗突发性耳聋帮助恢复听力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346354.md#1">部苗附设护理之家欢庆重阳节 街头艺人 美食共享</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345642.md#1">“苗北办公室”揭牌  提供民众更完善服务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345650.md#1">曾繁城捐1.1亿元 历时三年打造 清大捷英文物馆落成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345633.md#1">好动头份   有YOUNG精彩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345071.md#1">台风后农粮署加强调配蔬菜 持续推动卖场甘蓝优惠措施</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344900.md#1">公私携手移除生态杀手 小花蔓泽兰 维护紫斑蝶重要栖息地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344550.md#1">苗栗市首办歌唱大赛 青少年的“畅歌”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344484.md#1">苗县府安全维护会报 主管保密项目 监视器调阅作业</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339816.md#1">【未解之谜】中国北方异象频现 有大事要发生？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317010.md#1">【古道人生】什么是真善？看他怎么待穷山民 善报不招自来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340375.md#1">《非常主播》：在幽默与温情中寻找家庭的美好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/4/28/n2098371.md#1">进入另外空间   方晓佛法威严报应无情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/20/n14335274.md#1">中医玄妙医理 鸭子唾液起大作用 医生怎样悟到？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342889.md#1">【新闻欣视角】警官李长跃遭枪击 知情人爆内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340306.md#1">【环球直击】中国进入疫情高发季 医院人满为患</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342529.md#1">【新闻大家谈】万斯与沃尔兹辩论 赛后大解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341557.md#1">每天做15分钟副业月入上万 女子分享成功秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341586.md#1">人类终于在2600年后破解静电之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342063.md#1">十一邵阳市公安局内讧 局长李长跃遭枪击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14340889.md#1">《女神降临》日本电影版 木村拓哉女儿演主角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341507.md#1">范冰冰接拍大马电影拼翻身 清晨敷面膜到片场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341547.md#1">好莱坞明星柴克·莱威宣布支持川普 震惊业界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342324.md#1">85岁老人泪洒刀郎演唱会 获赞追星最高“境界”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341902.md#1">《台北追缉令》在台票房称冠 伊凡斯忆拍片时光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341157.md#1">昆虫学家教你几招 防止蚂蚁入侵浴室</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/26/n14338816.md#1">有备无患 这些应急食物可应对没水没电的日子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14242504.md#1">10亿人患关节炎？关节炎的种类及防治</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341760.md#1">印度占星家分析每个星座适合哪种工作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/14/n14201901.md#1">累了就吃B群？ 吃错更耗能</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688463.md#1">【军事情报局】打爆委国的F-35中队飞往中东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688423.md#1">【百年真相】习亲提24个亿元贪官 酿七大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688442.md#1">【直播】诺姆部长就“旅行黄金时代”开记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/2/n13877328.htm">车祸酿严重外伤 高压氧治疗助8旬翁免开刀</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/2/n13877328.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
